Fix compilation issue in Tycho build